# SpeechToText

./: .gitignore  Cargo.toml
.cargo/: config.toml
app/: Cargo.toml
app/src/: app.rs  history.rs  i18n.rs  main.rs  models.rs  types.rs
app/src/audio/: decoder.rs  mod.rs  recorder.rs
app/src/transcription/: engine.rs  model.rs
app/src/translation/: llm.rs  mod.rs  model.rs  opus.rs
app/src/tts/: engine.rs  player.rs
app/src/ui/: controls.rs  empty_state.rs  history.rs  icons.rs  message_bubble.rs  mod.rs  settings.rs  theme.rs
llm-worker/: Cargo.toml
llm-worker/src/: main.rs
tts-worker/: requirements-kokoro.txt  requirements.txt  setup.sh  tts_worker.py
