[package]
name = "speech-to-text"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.14", features = ["tokio", "image"] }
whisper-rs = { version = "0.16", features = ["cuda"] }
cpal = "0.16"
rfd = "0.15"
arboard = "3"
symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "aac", "wav", "pcm"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3.5"
dirs = "5"
reqwest = { version = "0.12", features = ["blocking"] }
image = { version = "0.25", default-features = false, features = ["png"] }
ct2rs = { version = "0.9", features = ["sentencepiece"] }
rodio = { version = "0.19", default-features = false, features = ["wav"] }
